[package]
name = "aegean"
version = "0.6.0"
description = "A fancy diagnostics & reporting crate"
authors = ["Gabriel Bruno Oliveira Pereira <gabrielbrunoes@gmail.com>"]
license = "MIT"
repository = "https://github.com/gabrielbrunop/aegean"
readme = "README.md"
edition = "2018"
keywords = ["error", "diagnostics", "report", "pretty", "compiler"]
categories = ["command-line-utilities", "compilers", "filesystem", "visualization"]
exclude = [
	"/misc",
	"/misc/*",
]

[features]
auto-color = ["concolor", "concolor/auto"]

[dependencies]
yansi = "1.0"
unicode-width = "0.1.9"
concolor = { version = "0.1", optional = true }

[dev-dependencies]
insta = "1.31.0"
